--- a/app/src/main/res/layout/activity_workers_profile_list.xml
+++ b/app/src/main/res/layout/activity_workers_profile_list.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.WorkersProfileListActivity">
+    tools:context="com.ankuran.ui.WorkersProfileListActivity">
 
 </android.support.constraint.ConstraintLayout>
