--- a/app/src/main/res/layout/activity_add_new_worker.xml
+++ b/app/src/main/res/layout/activity_add_new_worker.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="com.ankuran.ui.AddNewWorker">
+    tools:context="com.ankuran.ui.activity.AddNewWorker">
 
     <LinearLayout
         android:id="@+id/imageContainer"
