--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
 
     <color name="editTextBG">#F8F8F8</color>
     <color name="editTextBorder">#959595</color>
-
+    <color name="viewBg">#f1f5f8</color>
 </resources>
