--- a/app/src/main/res/layout/activity_workers_profile_list.xml
+++ b/app/src/main/res/layout/activity_workers_profile_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    tools:context="com.ankuran.ui.activity.WorkersProfileListActivity">
+    tools:context=".ui.activity.WorkersProfileListActivity">
 
     <LinearLayout
         android:padding="20dp"
