--- a/app/src/main/res/layout/activity_calculate_wage.xml
+++ b/app/src/main/res/layout/activity_calculate_wage.xml
@@ -3,10 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.ankuran.ui.activity.AddNewItem">
-
-
+    android:layout_height="match_parent">
 
 </LinearLayout>
