--- a/app/src/main/res/layout/activity_add_new_worker.xml
+++ b/app/src/main/res/layout/activity_add_new_worker.xml
@@ -7,43 +7,66 @@
     tools:context="com.ankuran.ui.activity.AddNewWorker">
 
     <LinearLayout
+        android:layout_weight="3"
         android:id="@+id/imageContainer"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_weight="2"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_image"
+        <FrameLayout
+            android:id="@+id/profileImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:src="@drawable/profilepic"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@android:color/white"/>
+            android:layout_marginTop="10dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/profilepic"
+                app:civ_border_width="2dp"
+                android:layout_gravity="bottom|center_horizontal"
+                app:civ_border_color="@android:color/transparent"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_photo_camera"
+                app:civ_border_width="2dp"
+                android:layout_gravity="bottom|right"
+                app:civ_border_color="@android:color/transparent"/>
+
+
+        </FrameLayout>
+
+
 
     </LinearLayout>
 
     <LinearLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_weight="5"
         android:orientation="vertical"
-        android:layout_weight="7"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
 
         <LinearLayout
-            android:padding="20dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="#0d5561"
                 android:lineSpacingExtra="4sp"
                 android:text="@string/txt_name"
@@ -51,7 +74,7 @@
 
             <EditText
                 android:id="@+id/etName"
-                android:layout_weight="7"
+                android:layout_weight="6"
                 android:hint="name"
                 android:inputType="text"
                 android:layout_width="0dp"
@@ -62,16 +85,16 @@
         </LinearLayout>
 
         <LinearLayout
-            android:padding="20dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="#0d5561"
                 android:lineSpacingExtra="4sp"
                 android:text="@string/txt_phone"
@@ -79,7 +102,7 @@
 
             <EditText
                 android:id="@+id/etPhone"
-                android:layout_weight="7"
+                android:layout_weight="6"
                 android:hint="88678567565"
                 android:inputType="number"
                 android:maxLength="10"
@@ -91,24 +114,25 @@
         </LinearLayout>
 
         <LinearLayout
-            android:padding="20dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="#0d5561"
                 android:lineSpacingExtra="4sp"
                 android:text="@string/txt_husband_name"
                 />
 
+
             <EditText
                 android:id="@+id/etHusbandName"
-                android:layout_weight="7"
+                android:layout_weight="6"
                 android:hint="name"
                 android:inputType="text"
                 android:layout_width="0dp"
@@ -119,16 +143,16 @@
         </LinearLayout>
 
         <LinearLayout
-            android:padding="20dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_weight="3"
+                android:layout_weight="4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textColor="#0d5561"
                 android:lineSpacingExtra="4sp"
                 android:text="@string/txt_husband_id"
@@ -136,9 +160,9 @@
 
             <EditText
                 android:id="@+id/etHusbandId"
-                android:layout_weight="7"
+                android:layout_weight="6"
                 android:hint="745675"
-                android:inputType="number"
+                android:inputType="text"
                 android:layout_width="0dp"
                 android:background="@drawable/bg_rounded_edittext"
                 android:layout_height="wrap_content" />
@@ -147,25 +171,23 @@
         </LinearLayout>
 
 
-        <Button
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:id="@+id/btnSave"
-            android:layout_gravity="center"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:text="@string/btxt_save"
-            android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:background="@drawable/primary_button_bg"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content" />
-
-
-
-
 
     </LinearLayout>
+
+    <Button
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:id="@+id/btnSave"
+        android:layout_gravity="bottom"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:text="@string/btxt_save"
+        android:textSize="20sp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/primary_button_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 
 </LinearLayout>
