--- a/app/src/main/res/layout/row_activity_list.xml
+++ b/app/src/main/res/layout/row_activity_list.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        card_view:cardBackgroundColor="@color/editTextBG"
+        card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="5dp"
         card_view:contentPadding="5dp"
         card_view:cardElevation="4dp"
@@ -32,7 +31,7 @@
                 android:id="@+id/date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textSize="16sp"
                 android:textColor="@color/addWorkText"
                 android:layout_marginBottom="5dp"
                 android:ellipsize="end"
@@ -46,7 +45,7 @@
                 android:id="@+id/item"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textSize="16sp"
                 android:textColor="@color/addWorkText"
                 android:layout_marginBottom="5dp"
                 android:text="Flower Bedsheet"
@@ -59,7 +58,7 @@
                 android:id="@+id/quantity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textSize="16sp"
                 android:textColor="@color/addWorkText"
                 android:layout_marginBottom="5dp"
                 android:text="2"
@@ -72,7 +71,7 @@
                 android:layout_marginBottom="5dp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textColor="#c64319"
                 android:lineSpacingExtra="4sp"
                 android:text="RS 3437"
