--- a/app/src/main/res/layout/row_worker_list.xml
+++ b/app/src/main/res/layout/row_worker_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:paddingRight="12dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,10 +11,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        card_view:cardBackgroundColor="@color/editTextBG"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="5dp"
+        card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="5dp"
-        card_view:contentPadding="5dp"
         card_view:cardElevation="4dp"
         card_view:cardMaxElevation="6dp"
         >
@@ -29,8 +28,8 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profileImage"
                 android:layout_gravity="center"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:src="@drawable/profilepic"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@android:color/white"/>
@@ -48,7 +47,7 @@
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
+                    android:textSize="18sp"
                     android:textColor="#9b6e2e"
                     android:layout_marginBottom="5dp"
                     android:text="Firstname Lastname"
@@ -58,7 +57,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textColor="#9b6e2e"
                     android:lineSpacingExtra="0sp"
                     android:text="+91 98765 43210 "
@@ -74,7 +73,7 @@
                 android:orientation="horizontal"
                 android:id="@+id/actionContainer"
                 android:layout_gravity="center"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
 
@@ -84,8 +83,9 @@
                     android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textColor="#c64319"
+                    android:layout_weight="2"
                     android:lineSpacingExtra="4sp"
                     android:text="RS 3437"
                     />
@@ -95,14 +95,9 @@
                     android:id="@+id/detailIcon"
                     android:gravity="center"
                     android:layout_weight="1"
-                    android:drawableRight="@android:drawable/ic_input_get"
-                    android:layout_marginTop="10dp"
+                    android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="#9b6e2e"
-                    android:lineSpacingExtra="4sp"
-
                     />
 
 
