--- a/app/src/main/res/layout/segment_add_wage.xml
+++ b/app/src/main/res/layout/segment_add_wage.xml
@@ -2,106 +2,176 @@
 <LinearLayout
     android:id="@+id/llAddWageContainer"
     android:padding="20dp"
-    android:visibility="gone"
+    android:visibility="visible"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:layout_gravity="center"
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#020202"
-        android:gravity="end"
-        android:text="@string/txt_date"
+        android:textSize="25sp"
+        android:textColor="@color/headerBrown"
+        android:layout_marginBottom="5dp"
+        android:text="@string/btxt_add_wage"
         />
 
-    <EditText
-        android:id="@+id/etDate"
-        android:hint="11 JAN 2019"
-        android:layout_margin="20dp"
-        android:inputType="none"
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:background="@drawable/bg_rounded_edittext"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#0d5561"
+            android:lineSpacingExtra="4sp"
+            android:text="@string/txt_date"
+            />
+
+        <EditText
+            android:id="@+id/etWageDate"
+            android:hint="11 JAN 2019"
+            android:layout_weight="7"
+            android:layout_width="0dp"
+            android:enabled="false"
+            android:background="@drawable/bg_rounded_edittext"
+            android:layout_height="wrap_content" />
 
 
+    </LinearLayout>
 
-    <TextView
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#020202"
-        android:gravity="end"
-        android:text="@string/txt_item"
-        />
-
-    <android.support.v7.widget.AppCompatSpinner
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="40dp"></android.support.v7.widget.AppCompatSpinner>
+        android:layout_height="wrap_content">
 
-    <!--<EditText-->
-        <!--android:id="@+id/etPayment"-->
-        <!--android:hint="745675"-->
-        <!--android:layout_margin="20dp"-->
-        <!--android:inputType="number"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:background="@drawable/bg_rounded_edittext"-->
-        <!--android:layout_height="wrap_content" />-->
+        <TextView
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#0d5561"
+            android:lineSpacingExtra="4sp"
+            android:text="@string/txt_item"
+            />
+
+        <android.support.v7.widget.AppCompatSpinner
+            android:layout_weight="7"
+            android:layout_width="0dp"
+            android:layout_height="40dp"></android.support.v7.widget.AppCompatSpinner>
 
 
-    <TextView
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#020202"
-        android:gravity="end"
-        android:text="@string/txt_quantity"
-        />
+    </LinearLayout>
 
 
 
-    <android.support.v7.widget.AppCompatSpinner
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:background="@drawable/bg_spinner"
-        android:layout_height="40dp">
+        android:layout_height="wrap_content">
 
-    </android.support.v7.widget.AppCompatSpinner>
+        <TextView
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#0d5561"
+            android:lineSpacingExtra="4sp"
+            android:text="@string/txt_quantity"
+            />
+
+        <android.support.v7.widget.AppCompatSpinner
+            android:layout_weight="7"
+            android:id="@+id/npWageQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:prompt="@string/add_quantity_prompt"
+            android:saveEnabled="true"
+            />
 
 
-    <TextView
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#020202"
-        android:gravity="end"
-        android:text="@string/txt_amount"
-        />
 
-    <EditText
-        android:id="@+id/etAmount"
-        android:hint="745675"
-        android:layout_margin="20dp"
-        android:inputType="number"
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:background="@drawable/bg_rounded_edittext"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#0d5561"
+            android:lineSpacingExtra="4sp"
+            android:text="@string/txt_amount_quantity"
+            />
+
+        <EditText
+            android:id="@+id/etWageAmount"
+            android:hint="1100"
+            android:layout_weight="7"
+            android:layout_width="0dp"
+            android:inputType="numberDecimal"
+            android:background="@drawable/bg_rounded_edittext"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="#0d5561"
+            android:lineSpacingExtra="4sp"
+            android:text="@string/txt_amount"
+            />
+
+        <EditText
+            android:id="@+id/etWageFullAmount"
+            android:hint="1100"
+            android:layout_weight="7"
+            android:layout_width="0dp"
+            android:enabled="false"
+            android:inputType="numberDecimal"
+            android:background="@drawable/bg_rounded_edittext"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
+
 
     <Button
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:id="@+id/btnSave"
+        android:id="@+id/btnAddWage"
         android:layout_gravity="center"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:text="@string/btxt_save"
-        android:textSize="30sp"
+        android:text="@string/btxt_add_wage"
+        android:textSize="20sp"
         android:textColor="@android:color/white"
         android:background="@drawable/primary_button_bg"
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
