--- a/app/src/main/res/layout/segment_worker_description.xml
+++ b/app/src/main/res/layout/segment_worker_description.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="5dp"
+        card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="5dp"
         card_view:contentPadding="5dp">
 
@@ -23,8 +24,8 @@
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profileImage"
                 android:layout_gravity="center"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
                 android:src="@drawable/profilepic"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@android:color/white"/>
@@ -42,7 +43,7 @@
                     android:id="@+id/txtName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="25sp"
+                    android:textSize="18sp"
                     android:textColor="#9b6e2e"
                     android:layout_marginBottom="5dp"
                     android:text="Firstname Lastname"
@@ -52,7 +53,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="16sp"
                     android:textColor="#9b6e2e"
                     android:lineSpacingExtra="0sp"
                     android:text="+91 98765 43210 "
@@ -63,7 +64,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
+                    android:textSize="14sp"
                     android:textColor="#9b6e2e"
                     android:lineSpacingExtra="5sp"
                     android:text="Date Added : 02 -Jan- 2018"
@@ -74,7 +75,7 @@
                     android:layout_marginBottom="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="20sp"
+                    android:textSize="14sp"
                     android:textColor="#c64319"
                     android:lineSpacingExtra="4sp"
                     android:gravity="center_horizontal"
@@ -89,7 +90,8 @@
                 android:orientation="horizontal"
                 android:id="@+id/actionContainer"
                 android:gravity="center"
-                android:layout_weight="2"
+                android:layout_gravity="center"
+                android:layout_weight="4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content">
 
@@ -97,12 +99,11 @@
                     android:id="@+id/tvAddWage"
                     android:gravity="center"
                     android:layout_weight="1"
-                    android:drawableTop="@android:drawable/ic_input_get"
-                    android:layout_marginTop="10dp"
+                    android:drawableTop="@drawable/add_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="#9b6e2e"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimaryDark"
                     android:lineSpacingExtra="4sp"
                     android:text="@string/txt_add_wage"
                     />
@@ -113,11 +114,10 @@
                     android:gravity="center"
                     android:layout_weight="1"
                     android:drawableTop="@android:drawable/ic_input_get"
-                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="15sp"
-                    android:textColor="#9b6e2e"
+                    android:textSize="14sp"
+                    android:textColor="@color/colorPrimaryDark"
                     android:lineSpacingExtra="4sp"
                     android:text="@string/txt_add_payment"
                     />
