--- a/app/src/main/res/layout-sw768dp/activity_workers_profile_list.xml
+++ b/app/src/main/res/layout-sw768dp/activity_workers_profile_list.xml
@@ -16,22 +16,20 @@
 
         <Button
             android:id="@+id/btnGroupWages"
-            android:drawableLeft="@android:drawable/ic_input_add"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_button_shadow"
+            android:background="@drawable/rounded_button"
             android:text="@string/btxt_group_wage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btnAddNewWorker"
-            android:drawableLeft="@android:drawable/ic_input_add"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_button_shadow"
+            android:background="@drawable/rounded_button"
             android:text="@string/btxt_new_worker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
