--- a/app/src/main/res/layout/row_group_wages.xml
+++ b/app/src/main/res/layout/row_group_wages.xml
@@ -1,38 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:paddingRight="12dp"
-              android:layout_marginVertical="2dp"
+              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              android:layout_marginVertical="1dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
-
     <android.support.v7.widget.CardView
             android:id="@+id/item_card_view"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="5dp"
-            card_view:cardUseCompatPadding="true"
+            card_view:cardBackgroundColor="@color/editTextBG"
+            android:layout_margin="4dp"
             card_view:cardCornerRadius="5dp"
+            card_view:contentPadding="5dp"
             card_view:cardElevation="4dp"
-            card_view:cardMaxElevation="6dp"
-    >
-
+            card_view:cardMaxElevation="6dp">
         <LinearLayout
-                android:padding="10dp"
+                android:layout_marginLeft="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
-            <CheckBox
-                    android:id="@+id/checkBox"
-                    android:layout_weight="1"
-                    android:layout_marginRight="8dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:visibility="gone">
-            </CheckBox>
 
             <de.hdodenhof.circleimageview.CircleImageView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -43,18 +31,16 @@
                     android:src="@drawable/profilepic"
                     app:civ_border_width="2dp"
                     app:civ_border_color="@android:color/white"/>
-
             <LinearLayout
                     android:layout_marginLeft="10dp"
                     android:orientation="vertical"
-                    android:id="@+id/detailsContainer"
                     android:gravity="left"
                     android:layout_weight="6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content">
 
                 <TextView
-                        android:id="@+id/name"
+                        android:id="@+id/employeeName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
@@ -67,48 +53,23 @@
                         android:layout_marginBottom="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
+                        android:textSize="20sp"
                         android:textColor="#9b6e2e"
                         android:lineSpacingExtra="0sp"
                         android:text="+91 98765 43210 "
                 />
-
-
             </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:id="@+id/actionContainer"
-                    android:layout_gravity="center"
-                    android:layout_weight="3"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content">
-
-                <TextView
-                        android:gravity="center"
-                        android:id="@+id/dueAmount"
-                        android:layout_marginBottom="5dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        android:textColor="#c64319"
-                        android:layout_weight="2"
-                        android:lineSpacingExtra="4sp"
-                        android:text="RS 3437"
-                />
-
-                <ImageView
-                        android:id="@+id/icon_caret"
-                        android:layout_marginLeft="5dp"
-                        android:src="@drawable/icon_caret_right"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"/>
-
-            </LinearLayout>
-
+            <EditText
+                    android:id="@+id/workerWageEditText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter worker wage"
+                    android:inputType="numberDecimal"
+                    android:imeOptions="actionDone"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@drawable/bg_rounded_edittext"
+                    tools:textSize="12sp"/>
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
-
 </LinearLayout>
