--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,12 +7,10 @@
     <color name="addWorkText">#0d5561</color>
     <color name="primaryButton">#009688</color>
 
-    <color name="editTextBG">#F8F8F8</color>
+    <color name="editTextBG">#f8f8f8</color>
     <color name="editTextBorder">#959595</color>
     <color name="viewBg">#f1f5f8</color>
 
     <color name="headerBrown">#9b6e2e</color>
-
-
 
 </resources>
