--- a/app/src/main/res/layout/activity_add_new_item.xml
+++ b/app/src/main/res/layout/activity_add_new_item.xml
@@ -23,8 +23,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/itemImage"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/profilepic"
                 app:civ_border_width="2dp"
                 android:layout_gravity="bottom|center_horizontal"
@@ -70,6 +70,34 @@
                 android:id="@+id/etName"
                 android:layout_weight="7"
                 android:hint="name"
+                android:inputType="text"
+                android:layout_width="0dp"
+                android:background="@drawable/bg_rounded_edittext"
+                android:layout_height="wrap_content" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:padding="20dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="#0d5561"
+                android:lineSpacingExtra="4sp"
+                android:text="@string/txt_type"
+                />
+
+            <EditText
+                android:id="@+id/etType"
+                android:layout_weight="7"
+                android:hint="BedSheet"
                 android:inputType="text"
                 android:layout_width="0dp"
                 android:background="@drawable/bg_rounded_edittext"
