--- a/app/src/main/res/layout/activity_add_new_worker.xml
+++ b/app/src/main/res/layout/activity_add_new_worker.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content">
 
         <FrameLayout
             android:id="@+id/profileImage"
@@ -47,146 +47,227 @@
     </LinearLayout>
 
     <LinearLayout
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:layout_weight="5"
+        android:layout_weight="7"
+        android:id="@+id/bodyContainer"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content">
 
+        <ScrollView
 
-        <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:layout_weight="4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="#0d5561"
-                android:lineSpacingExtra="4sp"
-                android:text="@string/txt_name"
-                />
-
-            <EditText
-                android:id="@+id/etName"
-                android:layout_weight="6"
-                android:hint="name"
-                android:inputType="text"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_rounded_edittext"
-                android:layout_height="wrap_content" />
+                <LinearLayout
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:layout_weight="5"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp">
 
 
-        </LinearLayout>
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_weight="4"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="#0d5561"
+                            android:lineSpacingExtra="4sp"
+                            android:text="@string/txt_name"
+                            />
 
-            <TextView
-                android:layout_weight="4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="#0d5561"
-                android:lineSpacingExtra="4sp"
-                android:text="@string/txt_phone"
-                />
-
-            <EditText
-                android:id="@+id/etPhone"
-                android:layout_weight="6"
-                android:hint="88678567565"
-                android:inputType="number"
-                android:maxLength="10"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_rounded_edittext"
-                android:layout_height="wrap_content" />
+                        <EditText
+                            android:id="@+id/etName"
+                            android:layout_weight="6"
+                            android:hint="name"
+                            android:inputType="text"
+                            android:layout_width="0dp"
+                            android:background="@drawable/bg_rounded_edittext"
+                            android:layout_height="wrap_content" />
 
 
-        </LinearLayout>
+                    </LinearLayout>
 
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_weight="4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="#0d5561"
-                android:lineSpacingExtra="4sp"
-                android:text="@string/txt_husband_name"
-                />
+                        <TextView
+                            android:layout_weight="4"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="#0d5561"
+                            android:lineSpacingExtra="4sp"
+                            android:text="@string/txt_phone"
+                            />
 
-
-            <EditText
-                android:id="@+id/etHusbandName"
-                android:layout_weight="6"
-                android:hint="name"
-                android:inputType="text"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_rounded_edittext"
-                android:layout_height="wrap_content" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_weight="4"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textColor="#0d5561"
-                android:lineSpacingExtra="4sp"
-                android:text="@string/txt_husband_id"
-                />
-
-            <EditText
-                android:id="@+id/etHusbandId"
-                android:layout_weight="6"
-                android:hint="745675"
-                android:inputType="text"
-                android:layout_width="0dp"
-                android:background="@drawable/bg_rounded_edittext"
-                android:layout_height="wrap_content" />
+                        <EditText
+                            android:id="@+id/etPhone"
+                            android:layout_weight="6"
+                            android:hint="88678567565"
+                            android:inputType="number"
+                            android:maxLength="10"
+                            android:layout_width="0dp"
+                            android:background="@drawable/bg_rounded_edittext"
+                            android:layout_height="wrap_content" />
 
 
-        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_weight="4"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="#0d5561"
+                            android:lineSpacingExtra="4sp"
+                            android:text="@string/txt_husband_name"
+                            />
+
+
+                        <EditText
+                            android:id="@+id/etHusbandName"
+                            android:layout_weight="6"
+                            android:hint="Husband Name"
+                            android:inputType="text"
+                            android:layout_width="0dp"
+                            android:background="@drawable/bg_rounded_edittext"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_weight="4"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="#0d5561"
+                            android:lineSpacingExtra="4sp"
+                            android:text="@string/txt_husband_id"
+                            />
+
+                        <EditText
+                            android:id="@+id/etHusbandId"
+                            android:layout_weight="6"
+                            android:hint="Husband Id"
+                            android:inputType="text"
+                            android:layout_width="0dp"
+                            android:background="@drawable/bg_rounded_edittext"
+                            android:layout_height="wrap_content" />
+
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_marginTop="15dp"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_weight="4"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="#0d5561"
+                            android:lineSpacingExtra="4sp"
+                            android:text="@string/txt_outstanding_amt"
+                            />
+
+                        <LinearLayout
+                            android:background="@drawable/bg_rounded_edittext"
+                            android:layout_weight="6"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:textColor="#0d5561"
+                                android:text="@string/Rs"
+                                />
+
+                            <EditText
+                                android:id="@+id/etOutstantingAmount"
+                                android:hint="745675"
+                                android:inputType="numberDecimal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@android:color/transparent"/>
+
+
+                        </LinearLayout>
+
+
+
+
+
+
+                    </LinearLayout>
+
+
+
+                </LinearLayout>
+
+                <Button
+                    android:layout_margin="10dp"
+                    android:gravity="center"
+                    android:id="@+id/btnSave"
+                    android:layout_gravity="bottom"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/btxt_save"
+                    android:textSize="20sp"
+                    android:textColor="@android:color/white"
+                    android:background="@drawable/primary_button_bg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+
+            </LinearLayout>
+
+
+        </ScrollView>
+
+
+
+
 
 
 
     </LinearLayout>
 
-    <Button
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:id="@+id/btnSave"
-        android:layout_gravity="bottom"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="@string/btxt_save"
-        android:textSize="20sp"
-        android:textColor="@android:color/white"
-        android:background="@drawable/primary_button_bg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
 
 
 
