--- a/app/src/main/res/layout/segment_worker_description.xml
+++ b/app/src/main/res/layout/segment_worker_description.xml
@@ -113,7 +113,7 @@
                     android:id="@+id/tvAddPayout"
                     android:gravity="center"
                     android:layout_weight="1"
-                    android:drawableTop="@android:drawable/ic_input_get"
+                    android:drawableTop="@drawable/add_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
