WIP item details

--- a/app/src/main/res/layout/segment_tab_layout.xml
+++ b/app/src/main/res/layout/segment_tab_layout.xml
@@ -13,6 +13,7 @@
         app:tabGravity="fill"
         app:tabIndicatorColor="@color/colorPrimary"
         app:tabIndicatorHeight="4dp"
+        app:tabMaxWidth="0dp"
         app:tabBackground="@color/colorWhite"
         app:tabMode="fixed">
     </android.support.design.widget.TabLayout>
