--- a/app/src/main/res/layout/activity_inventory_list.xml
+++ b/app/src/main/res/layout/activity_inventory_list.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activity.WorkerActivityList">
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/itemRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:weightSum="5">
+    <include layout="@layout/layout_inventory_filters"
+             android:layout_weight="2"
+             android:layout_height="match_parent"
+             android:layout_width="0dp"/>
+    <LinearLayout
+            android:padding="20dp"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="3">
+        <TextView
+                android:id="@+id/categoryHeader"
+                android:text="@string/txt_items"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textSize="20sp"
+                android:textColor="#0d5561"
+                android:lineSpacingExtra="4sp"
+        />
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/item_recycler_view"
+                android:layout_marginVertical="20dp"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"/>
+    </LinearLayout>
 </LinearLayout>
